Fix gap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -504,7 +504,7 @@ section {
 .section-text {
   float: none;
   text-align: center;
-  margin: 0 auto 45px;
+  margin: 0 auto 15px;
   position: relative;
   padding-bottom: 35px;
 }
